# PetCoder

./: LICENSE  README.md  new_synonyms_template.csv  pyproject.toml  requirements.txt  setup.py
src/: example.py
src/petharbor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pettag/: __init__.py  predict.py
src/pettag/utils/: dataset.py  logging_setup.py  processor_code.py  processor_model.py
