[tool.poetry]
name = "PetTag"
version = "0.0.8"
description = "PetTag is a Python package designed for automated disease coding of veterinary clinical texts using either a pre-trained model."
authors = ["Sean Farrell <sean.farrell2@durham.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pettag", from = "src" }]
python = ">=3.9"

[tool.poetry.dependencies]
python = ">=3.9"
datasets = ">=4.0.0"
sentence-transformers = ">=5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
